--- a/java-gateway/pom.xml
+++ b/java-gateway/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.pythonorc</groupId>
     <artifactId>gateway</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
 
     <dependencies>
